fixed word wrap on deals

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -1,3 +1,9 @@
+.list-block .deal-title{
+     white-space:normal;
+     word-wrap: break-word;
+}
+
+
 
 .notification-count{
   position:absolute;
